# tdtbuj

./: CMakeLists.txt  Doxyfile  Doxyfile.cmake  LinAlg.vfproj  Parser.vfproj  ProjectHome.md  README
Util/: FindBLAS.cmake  FindLAPACK.cmake  FindMKLSOLVER.cmake  cxz  mxz
Util/BfromCxz/: CMakeLists.txt  Doxyfile.cmake
Util/BfromCxz/source/: Gutenberg.f90  Magnetic.f90  main.f90
Util/ReadCxz/: CMakeLists.txt
Util/ReadCxz/source/: Gutenberg.f90  Read.f90  main.f90
Util/ReadMxz/: CMakeLists.txt
Util/ReadMxz/examples/: eh_dyn.mxz  eh_dyn.tar.bz2
Util/ReadMxz/source/: Gutenberg.f90  Read.f90  Useful.f90  main.f90
Util/changeUnitscxz/: CMakeLists.txt  COPYING
Util/changeUnitscxz/source/: main.f90
Util/extractFromCxz/: CMakeLists.txt  Doxyfile.cmake
Util/extractFromCxz/source/: Gutenberg.f90  Read.f90  Useful.f90  main.f90
examples/: coords.inp  gsp.inp  inp  inp1
source/: BFGS.f90  Constants.f90  DensityMatrix.f90  DriverRoutines.f90  Dynamics.f90  Electrostatics.f90  Fit.f90  Gutenberg.f90  Hamiltonian.f90  LBFGS.f90  LinearAlgebra.F90  LinearAlgebra.f90  Mixing.F90  Mixing.f90  Parser.f90  ReadData.f90  SA.f90  SCF.f90  Simplex.f90  SimplexSA.f90  SlaterKoster.f90  Testing.f90  TightBinding.f90  Types.f90  Useful.f90  constants.f90  generalio.f90  main.f90  parser.f90  tails.f90  tight_binding.f90  types.f90  useful.f90
tags/0.9.0/: Tdtbuj.sln
tags/0.9.0/Util/: CheckFortranFunctionExists.cmake  FindMKLSOLVER.cmake
tags/0.9.0/source/: Constants.f90  Mixing.f90
tags/0.9.0/thesis/: CMakeLists.txt  thesis.tps
tags/0.9.0/thesis/src/: aprilthesis.cls  chapter2.tex  chapter4.tex  glossary-long.sty  glossary.tex
tags/Rel-0.9.0/: CMakeLists.txt  LinAlg.vfproj  Parser.vfproj  tdtbuj.vfproj
tags/Rel-0.9.0/source/: Fit.f90  Parser.f90  ReadData.f90  SCF.f90
tags/Rel-0.9.0/thesis/: UseLATEX.cmake
tags/Rel-0.9.0/thesis/src/: abstract.tex  appendixB.tex  chapter3.tex  extramath.sty  mythesis.bib
thesis/: CMakeLists.txt  Quotes.txt  cmake.sh  cmakeReb.sh  thesis.tcp
thesis/src/: abstract.tex  appendices.tex  appendixA.tex  appendixB.tex  appendixC.tex  aprilthesis.cls  chap2.tex  chap3.tex  chapter1.tex  chapter2.tex  chapter3.tex  extramath.sty  glossaries.sty  glossary.tex  introduction.tex  mythesis.bib  parametrisation.tex  thesis.cls  thesis.tex
trunk/: CMakeLists.txt  Doxyfile  README  tdtbuj.vfproj
trunk/Util/: CheckFortranFunctionExists.cmake  CheckMKL.cmake  FindBLAS.cmake  FindLAPACK.cmake  FindMKLPDE.cmake  FindMKLSOLVER.cmake  cxz  f90ppr.f90  lev  mxz
trunk/Util/BfromCxz/: CMakeLists.txt
trunk/Util/BfromCxz/examples/: bondCharges.tar.bz2
trunk/Util/BfromCxz/source/: Gutenberg.f90  Magnetic.f90  Read.f90  Useful.f90
trunk/Util/ReadCxz/examples/: bondCharges.tar.bz2
trunk/Util/ReadCxz/source/: Gutenberg.f90  Useful.f90  main.f90
trunk/Util/ReadMxz/: CMakeLists.txt  Doxyfile.cmake
trunk/Util/ReadMxz/source/: Gutenberg.f90  Read.f90
trunk/Util/changeUnitscxz/examples/: bondCharges.tar.bz2
trunk/Util/changeUnitscxz/source/: Read.f90  Useful.f90
trunk/Util/extractFromCxz/examples/: bondCharges.tar.bz2
trunk/Util/extractFromCxz/source/: Gutenberg.f90  Read.f90  Useful.f90  main.f90
trunk/examples/: basis.inp  inp  inp2  species.inp
trunk/source/: BFGS.F90  BFGS.f90  Constants.f90  DensityMatrix.f90  DriverRoutines.f90  Dynamics.f90  Electrostatics.f90  Fit.F90  Fit.f90  Gutenberg.f90  Hamiltonian.f90  LBFGS.F90  LBFGS.f90  LinearAlgebra.F90  LinearAlgebra.f90  Mixing.f90  ReadData.F90  ReadData.f90  SA.f90  SCF.f90  SCF2.f90  Simplex.f90  SimplexSA.f90  SlaterKoster.f90  TailFunctions.f90  Testing.f90  TightBinding.f90  Types.f90  Useful.f90  constants.f90  generalio.f90  linear_algebra.f90  main.f90  parser.f90  slater_koster.f90  types.f90  useful.f90
trunk/thesis/: CMakeLists.txt  Quotes.txt  UseLATEX.cmake  thesis.tcp
trunk/thesis/src/: acknowledgement.tex  appendices.tex  appendixB.tex  appendixD.tex  aprilthesis.cls  backmatter.tex  chap1.tex  chap2.tex  chapter1.tex  chapter2.tex  chapter4.tex  chapter5.tex  csquotes.sty  extramath.sty.backup  frontmatter.tex  glossary-long.sty  glossary.tex  introduction.tex  main.tex  mythesis.bib  thesis.sty  thesis.tex
